# reduced-input-pvt-ml

./: .gitignore  CITATION.cff  README.md  pyproject.toml
.github/workflows/: tests.yml
data/: README.md  literature_sources.csv  literature_validation.csv
docs/: data_availability.md  literature_dataset.md  literature_schema.md  model_scope.md  public_release_checklist.md  repository_policy.md  reviewer_guide.md
examples/: README.md  literature_dataset_overview.py
models/: README.md
notebooks/: README.md  literature_validation_overview.ipynb
results/: README.md
scripts/: build_literature_public_dataset.py  validate_literature_dataset.py
src/pvt_ml/: __init__.py  architectures.py  features.py  inference.py  literature.py  metrics.py  validation.py
tests/: test_architectures.py  test_features.py  test_inference.py  test_literature.py  test_metrics.py  test_public_literature_files.py  test_validation.py
