[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reduced-input-pvt-ml"
version = "0.1.0"
description = "Public code and literature-validation companion repository for the reduced-input Hybrid-PT workflow."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
  {name = "Misael E. Zepeda-Diaz"}
]
dependencies = [
  "numpy",
  "pandas",
  "scikit-learn",
  "joblib"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
